<resources>

    <!-- Sign Up/Login Proceess-->
    <string name="UsernameEmail_label">Email</string>
    <string name="Password_label">Password</string>
    <string name="Login_label">Log in</string>
    <string name="email">What\'s your email?</string>
    <string name="enter_email">Please enter your email</string>
    <string name="already_have">Already have an account? Log in here</string>
    <string name="new_prompt">New to WishRoll? Signup here</string>
    <string name="create_account">Create Your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="eight">At least eight characters</string>
    <string name="retype_label">Re\-type your password</string>
    <string name="email_valid">Please enter a valid email</string>
    <string name="you_agree">By joining you agree to WishRoll\'s Terms of Service and Privacy Policy</string>
    <string name="Join">Join</string>
    <string name="welcome"><b>Welcome <br>to WishRoll</br></b></string>
    <string name="signup">Sign up</string>
    <string name="wrongCredentialsLogin">Wrong username or password, please try again</string>
    <string name="username_email">Username or Email</string>


    <!-- Globals/Use-Anywhere -->
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="back_button">Back</string>
    <string name="app_name">WishRoll</string>
    <string name="logo_description">WishRoll Logo</string>
    <string name="previous">Previous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <!-- Bottom Sheet Slider Text-->
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="your_account">Your Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="faqs">FAQs</string>

    <!-- Formatted Strings -->
    <string name="usernameWithAt">\@%s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Contact Activity -->
    <string name="great_email">great@wishroll.co</string>
    <string name="gboy_email">gboyokonkwo35@gmail.com</string>
    <string name="how_help">How can we help you?</string>
    <string name="send_email">Send</string>
    <string name="logout">Logout</string>

    <!-- Content View -->
    <string name="more_like_this">More Like This</string>
    <string name="concern_1">Inappropriate image/video</string>
    <string name="concern_2">Racist or sexist content</string>
    <string name="concern_3">Pornographic or nude content</string>
    <string name="concern_4">Homphobic Content</string>
    <string name="concern_5">Hate content</string>
    <string name="concern_6">Violent or graphic content</string>
    <string name="concern_7">Spamor repetitive content</string>
    <string name="concern_8">Other</string>

    <!-- Upload -->
    <string name="caption">Caption</string>
    <string name="tags">Tags</string>
    <string name="tags_required">Tags (required)</string>
    <string name="post_uploaded">Upload Successful…</string>

    <!-- File Utilities -->
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>


    <!-- Error Handling -->
    <string name="something_went_wrong">Something went wrong, please try again</string>

    <!-- More Ellipses -->
    <string name="privacy_policy_full">TBD</string>

    <!-- Search -->
    <string name="search_prompt">Search WishRoll…</string>
    <string name="wishroll_support">WishRoll Support</string>

    <string name="bookmarks">Bookmarks</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="legal">Legal</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="account">Account</string>
    <string name="general">General</string>


    <string name="select_birthdate">Select Birthday</string>

    <string name="Username_label">Username</string>

    <string name="set_username">Create a Username</string>
    <string name="usernamehint">Please enter your username</string>

    <string name="Age_Ask">When\'s Your Birthday?</string>

    <string name="age_warning">You must be 12 years or older to use WishRoll</string>
    <string name="age_month">Month</string>
    <string name="age_day">Day</string>
    <string name="age_year">Year</string>
    <string name="full_name">What\'s your Name?</string>
    <string name="gender_ask">What\'s your Gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_answer">Prefer Not to Answer</string>
    <string name="please_name">Please enter your full name</string>
    <string name="MM">MM</string>
    <string name="DD">DD</string>
    <string name="YYYY">YYYY</string>
    <string name="username_valid">No three periods(.) or underscores(_) in a row.</string>

    <!-- Globals/Use-Anywhere -->
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- Edit Profile Activity-->
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="bio_label">Bio</string>
    <string name="save_label">Save</string>
    <string name="saved_dialog">Profile Updated</string>
    <string name="profile_uploaded">Profile Updated</string>


    <string name="likes">Liked</string>
    <string name="no_results">No Results</string>
    <string name="no_wifi">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="email_or_username">Email or Username</string>
    <string name="no_trending_tags">No Trending Tags</string>
    <string name="no_liked">No Liked Posts Yet</string>
    <string name="no_uploads">No Posts Yet</string>
    <string name="no_bookmarks">No Bookmarked Posts Yet</string>
    <string name="no_notis">No Notifications Yet</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>


</resources>
