<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.registration.UsernameSignupActivity"
    android:scrollbarThumbVertical="@drawable/blue_button">

    <!-- Full Page -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/wishroll_blue"
                android:textSize="@dimen/_18ssp"
                android:layout_centerInParent="true"
                android:text="@string/create_account"/>

            <Button
                android:id="@+id/backButtonPassword"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_chevron_left_24"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"/>

            <EditText
                android:text=""
                android:id="@+id/userEmail"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"/>


        </LinearLayout>


        <!-- First Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Password_label"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/userPasswordOne"
                android:layout_width="@dimen/_250sdp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/eight"/>

        </LinearLayout>

        <!-- Confirm Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"/>

            <EditText
                android:inputType="textPassword"
                android:id="@+id/userPasswordTwo"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:hint="@string/retype_label"/>

        </LinearLayout>

        <!-- Terms of Service -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/electric_blue"
                android:text="@string/you_agree"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <!-- Sign Up Button wuth Extra Buffer & Progress Bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/bCreateAccount"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/blue_button"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_17ssp"/>

            <ProgressBar
                android:id="@+id/progressBarSignupLast"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
