<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/faqButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faqs"
            android:gravity="left"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/contactUsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:gravity="left"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:gravity="left"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/deleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:gravity="left"
            android:textColor="#e03d07"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/logout"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="#e03d07"
            />

    </LinearLayout>


</LinearLayout>
</layout>