<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/bottomSheetConcernsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/cancelConcernButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:gravity="left"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/electric_blue"
            />

        <TextView
            android:id="@+id/reportConcernButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:gravity="right"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/electric_blue"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <CheckedTextView
            android:id="@+id/concern_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concern_1"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <CheckedTextView
            android:id="@+id/concern_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concern_2"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <CheckedTextView
            android:id="@+id/concern_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concern_3"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <CheckedTextView
            android:id="@+id/concern_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concern_4"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <CheckedTextView
            android:id="@+id/concern_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concern_5"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/concern_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concern_6"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/concern_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/concern_7"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/concern_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/concern_8"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ededed"
        />








    </LinearLayout>



</layout>